<resources>
    <string name="app_name">Expenses &amp; Notes</string>
    <string name="title_activity_main"><![CDATA[My Notes & Expenses]]></string>
    <string name="app_author">Miguel Ángel López Arcos</string>
    <string name="app_author_email">migue300995@gmail.com</string>
    <string name="about_app">Esta App fue programada por Miguel Ángel López Arcos x\'D</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_activity_request_write_permission">Por favor activa el permiso de escritura desde las opciones de Android para esta aplicación ya que es indispensable acceder al almacenamiento del teléfono para poder usar esta aplicación.</string>
    <string name="menu_drawer_settings_label">Opciones</string>
    <string name="menu_drawer_settings_sync_label">Sincronizar</string>
    <string name="menu_drawer_settings_schedule_label">Programar horarios</string>
    <string name="menu_drawer_settings_about_label">Acerca De…</string>
    <string name="menu_drawer_settings_close_session">Cerrar sesión</string>
    <string name="fragment_account_entries_title">Gastos</string>
    <string name="fragment_my_money_title">Mi dinero</string>
    <string name="fragment_notepad_title">Bloc de Notas</string>
    <string name="fragment_deleted_notes_title">Notas Eliminadas</string>
    <string name="activity_add_account_entry_name_edit">Título</string>
    <string name="activity_add_account_entry_category_text">Categoría</string>
    <string name="activity_add_account_entry_account_text">Cuenta</string>
    <string name="empty_list_label">No hay datos</string>
    <string name="activity_add_account_entries_value_hint">Valor</string>
    <string name="dollar_sign">$</string>
    <string name="write_permission">Permiso de escritura</string>
    <string name="close_app_message">Salir</string>
    <string name="activate_permission">Activar</string>
    <string name="dialog_option_yes">Si</string>
    <string name="dialog_option_no">No</string>
    <string name="account_entries_categories">[{\"name\":\"C\u00F3mida\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Transporte\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Mascota\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Belleza y Cuidado Personal\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Salud\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Despensa\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Gastos de Casa\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Chucherias\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Compras\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Tel\u00E9fono\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Autom\u00F3vil\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Viajes\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Entretenimiento\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Miscelaneo de gastos\",\"iconId\":\"1\",\"isExpense\":true},{\"name\":\"Salario\",\"iconId\":\"1\",\"isExpense\":false},{\"name\":\"Premios\",\"iconId\":\"1\",\"isExpense\":false},{\"name\":\"Inversiones\",\"iconId\":\"1\",\"isExpense\":false},{\"name\":\"Trabajos extras\",\"iconId\":\"1\",\"isExpense\":false},{\"name\":\"Reembolsos\",\"iconId\":\"1\",\"isExpense\":false},{\"name\":\"Ventas\",\"iconId\":\"1\",\"isExpense\":false}]</string>
    <string name="fragment_revenues_title">Ingresos</string>
    <string name="delete_confirmation">¿Estás seguro de eliminar esto?</string>
    <string name="delete_confirmation_warning">Si eliminas, no podrás volver a recuperarlo</string>
</resources>