<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/expenses"
            android:icon="@drawable/ic_payment_grey"
            android:title="@string/fragment_account_entries_title" />

        <item
            android:id="@+id/revenues"
            android:icon="@drawable/ic_payment_grey"
            android:title="@string/fragment_revenues_title" />

        <item
            android:id="@+id/money_manager"
            android:icon="@drawable/ic_attach_money_grey"
            android:title="@string/fragment_my_money_title" />

        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_assignment_grey"
            android:title="@string/fragment_notepad_title" />
        <item
            android:id="@+id/deleted_notes"
            android:icon="@drawable/ic_delete_grey"
            android:title="@string/fragment_deleted_notes_title" />
    </group>

    <item android:title="@string/menu_drawer_settings_label">
        <menu>
            <item
                android:id="@+id/sync"
                android:icon="@drawable/ic_cached_grey"
                android:title="@string/menu_drawer_settings_sync_label" />
            <item
                android:id="@+id/schedule"
                android:icon="@drawable/ic_access_time_grey"
                android:title="@string/menu_drawer_settings_schedule_label" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_grey"
                android:title="@string/menu_drawer_settings_about_label" />
            <item
                android:id="@+id/close_session"
                android:icon="@drawable/ic_exit_to_app_grey"
                android:title="@string/menu_drawer_settings_close_session" />
        </menu>
    </item>

</menu>
