<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:gravity="start"
        android:text="@string/activity_add_account_entry_account_text"/>

    <Spinner
        android:id="@+id/account_spinner"
        android:prompt="@string/activity_add_account_entry_account_text"
        android:spinnerMode="dialog"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:text="@string/dollar_sign"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <EditText
            android:id="@+id/value_edit"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/activity_add_account_entries_value_hint"
            android:digits="0123456789-.+*()/,"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:textSize="25sp"
            android:maxLength="40"
            android:inputType="phone"
            android:layout_weight="95"/>

    </LinearLayout>

</LinearLayout>